api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: random-quotes-api-service
  labels:
    app: random-quotes-api
spec:
  type: LoadBalancer
  selector:
    app: random-quotes-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
